--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="header">Palindrome Birthday!</h2>
+        <h1 class="header">Palindrome Birthday!</h1>
+        <label for="input-bday">Please enter your birth date:</label>
         <input id = "input-bday" type="date"/>
         <button id="btn-output">Show</button>
         <p id="output"></p>
